# C_VEC

./: .gitignore  CMakeLists.txt  README.md
.ccls-cache/@@Users@connorbaker@Packages@C_Vec/: @usr@include@Availability.h.blob  @usr@include@AvailabilityInternal.h.blob  @usr@include@_stdio.h.blob  @usr@include@_types.h.blob  @usr@include@_types@_intmax_t.h.blob  @usr@include@_types@_uint16_t.h.blob  @usr@include@_types@_uint32_t.h.blob  @usr@include@_types@_uint64_t.h.blob  @usr@include@_types@_uint8_t.h.blob  @usr@include@_types@_uintmax_t.h.blob  @usr@include@alloca.h.blob  @usr@include@i386@_mcontext.h.blob  @usr@include@i386@_types.h.blob  @usr@include@i386@endian.h.blob  @usr@include@i386@signal.h.blob  @usr@include@i386@types.h.blob  @usr@include@libkern@_OSByteOrder.h.blob  @usr@include@libkern@i386@_OSByteOrder.h.blob  @usr@include@mach@i386@_structs.h.blob  @usr@include@mach@machine@_structs.h.blob  @usr@include@machine@_mcontext.h.blob  @usr@include@machine@_types.h.blob  @usr@include@machine@endian.h.blob  @usr@include@machine@signal.h.blob  @usr@include@machine@types.h.blob  @usr@include@malloc@_malloc.h.blob  @usr@include@stdint.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@string.h.blob  @usr@include@strings.h.blob  @usr@include@sys@_endian.h.blob  @usr@include@sys@_posix_availability.h.blob  @usr@include@sys@_pthread@_pthread_attr_t.h.blob  @usr@include@sys@_pthread@_pthread_types.h.blob  @usr@include@sys@_symbol_aliasing.h.blob  @usr@include@sys@_types.h.blob  @usr@include@sys@_types@_ct_rune_t.h.blob  @usr@include@sys@_types@_dev_t.h.blob  @usr@include@sys@_types@_errno_t.h.blob  (+32 more)
.ccls-cache/@Users@connorbaker@Packages@C_Vec/: src@vec_definitions.h.blob  src@vec_nomenclature.h  src@vec_nomenclature.h.blob  src@vec_prototypes.h.blob
docs/: ArrivingSoon.md  HowToUse.md  Implementation.md  README.md  SupportedOperations.md
examples/BinaryToDecimal/: CMakeLists.txt  main.c  proj_functions.c  proj_functions.h
src/: CMakeLists.txt  and_or_example.c  concat_example.c  foldl_foldr_example.c  main.c  proj_defs.h  vec.h  vec_definitions.h  vec_defs.h  vec_int.c  vec_int.h  vec_nomenclature.h  vec_prototypes.h
tests/: CMakeLists.txt  andOrTest.cpp  concatTest.cpp  testDriver.cpp
